# ghc-compat

./: .gitattributes  .gitignore  .vale.ini  README.md  cabal.project  flake.nix  garnix.yaml  nix-ci.nix
core/: CHANGELOG.md  README.md  ghc-compat.cabal
core/docs/: license-report.md
core/src/: GHC.hs  Unresolved.hs
core/src/GHC/: Cmm.hs  CmmToAsm.hs  CmmToC.hs  CmmToLlvm.hs  Core.hs  CoreToByteCode.hs  CoreToIface.hs  CoreToStg.hs  Hs.hs  HsToCore.hs  IfaceToCore.hs  Llvm.hs  Parser.hs  Plugins.hs  Prelude.hs  Settings.hs  StgToCmm.hs  SysTools.hs  ThToHs.hs
core/src/GHC/Builtin/: Names.hs  PrimOps.hs  Types.hs  Uniques.hs  Utils.hs
core/src/GHC/Builtin/Names/: TH.hs
core/src/GHC/Builtin/Types/: Literals.hs  Prim.hs
core/src/GHC/ByteCode/: Asm.hs  InfoTable.hs  Instr.hs  Linker.hs  Types.hs
core/src/GHC/Cmm/: BlockId.hs  CLabel.hs  CallConv.hs  CommonBlockElim.hs  ContFlowOpt.hs  Dataflow.hs  DebugBlock.hs  Expr.hs  Graph.hs  Info.hs  LayoutStack.hs  Lexer.hs  Lint.hs  Liveness.hs  MachOp.hs  Monad.hs  Node.hs  Opt.hs  Parser.hs  Pipeline.hs  Ppr.hs  ProcPoint.hs  Sink.hs  Switch.hs  Type.hs  Utils.hs
core/src/GHC/Cmm/Dataflow/: Block.hs  Collections.hs  Graph.hs  Label.hs
core/src/GHC/Cmm/Info/: Build.hs
core/src/GHC/Cmm/Ppr/: Decl.hs  Expr.hs
core/src/GHC/Cmm/Switch/: Implement.hs
core/src/GHC/CmmToAsm/: BlockLayout.hs  CFG.hs  CPrim.hs  Dwarf.hs  Format.hs  Instr.hs  Monad.hs  PIC.hs  Ppr.hs
core/src/GHC/CmmToAsm/CFG/: Dominators.hs
core/src/GHC/CmmToAsm/Dwarf/: Constants.hs  Types.hs
core/src/GHC/CmmToAsm/PPC/: CodeGen.hs  Cond.hs  Instr.hs  Ppr.hs  RegInfo.hs  Regs.hs
core/src/GHC/CmmToAsm/Reg/: Graph.hs  Linear.hs  Liveness.hs  Target.hs
core/src/GHC/CmmToAsm/SPARC/: AddrMode.hs  Base.hs  CodeGen.hs  Cond.hs  Imm.hs  Instr.hs  Ppr.hs  Regs.hs  ShortcutJump.hs  Stack.hs
core/src/GHC/CmmToAsm/X86/: CodeGen.hs  Cond.hs  Instr.hs  Ppr.hs  RegInfo.hs  Regs.hs
core/src/GHC/CmmToLlvm/: Base.hs  CodeGen.hs  Data.hs  Mangler.hs  Ppr.hs  Regs.hs
core/src/GHC/Core/: Class.hs  Coercion.hs  ConLike.hs  DataCon.hs  FVs.hs  FamInstEnv.hs  InstEnv.hs  Lint.hs  Make.hs  Map.hs  PatSyn.hs  Ppr.hs  Predicate.hs  Rules.hs  Seq.hs  SimpleOpt.hs  Stats.hs  Subst.hs  Tidy.hs  TyCon.hs  Type.hs  Unfold.hs  Unify.hs  Utils.hs
core/src/GHC/Core/Coercion/: Axiom.hs  Opt.hs
core/src/GHC/Core/Opt/: Arity.hs  CSE.hs  CallArity.hs  ConstantFold.hs  DmdAnal.hs  Driver.hs  Exitify.hs  FloatIn.hs  FloatOut.hs  LiberateCase.hs  Monad.hs  OccurAnal.hs  Pipeline.hs  SetLevels.hs  Simplify.hs  SpecConstr.hs  Specialise.hs  StaticArgs.hs  WorkWrap.hs
core/src/GHC/Core/Ppr/: TyThing.hs
core/src/GHC/Core/TyCo/: FVs.hs  Ppr.hs  Rep.hs  Subst.hs  Tidy.hs
core/src/GHC/CoreToStg/: Prep.hs
core/src/GHC/Data/: Bag.hs  Bitmap.hs  BooleanFormula.hs  EnumSet.hs  FastMutInt.hs  FastString.hs  FiniteMap.hs  IOEnv.hs  Maybe.hs  OrdList.hs  Pair.hs  Stream.hs  StringBuffer.hs  TrieMap.hs
core/src/GHC/Data/FastString/: Env.hs
core/src/GHC/Data/Graph/: Base.hs  Color.hs  Directed.hs  Ops.hs  Ppr.hs  UnVar.hs
core/src/GHC/Data/List/: SetOps.hs
core/src/GHC/Driver/: Backpack.hs  CmdLine.hs  CodeOutput.hs  DynFlags.hs  Env.hs  Finder.hs  Flags.hs  Hooks.hs  Main.hs  Make.hs  MakeFile.hs  Monad.hs  Packages.hs  Phases.hs  Pipeline.hs  Plugins.hs  Session.hs  Types.hs
core/src/GHC/Driver/Backpack/: Syntax.hs
core/src/GHC/Driver/Env/: Types.hs
core/src/GHC/Driver/Flags/: Compat.hs  Upstream.hs
core/src/GHC/Driver/Pipeline/: Monad.hs
core/src/GHC/Driver/Plugins/: Compat.hs  Upstream.hs
core/src/GHC/Hs/: Binds.hs  Decls.hs  Doc.hs  Dump.hs  Expr.hs  Extension.hs  ImpExp.hs  Instances.hs  Lit.hs  Pat.hs  PlaceHolder.hs  Stats.hs  Type.hs  Utils.hs
core/src/GHC/HsToCore/: Arrows.hs  Binds.hs  Coverage.hs  Docs.hs  Expr.hs  GuardedRHSs.hs  ListComp.hs  Match.hs  Monad.hs  PmCheck.hs  Quote.hs  Usage.hs  Utils.hs
core/src/GHC/HsToCore/Foreign/: Call.hs  Decl.hs
core/src/GHC/HsToCore/Match/: Constructor.hs  Literal.hs
core/src/GHC/HsToCore/PmCheck/: Oracle.hs  Ppr.hs  Types.hs
core/src/GHC/Iface/: Binary.hs  Env.hs  Load.hs  Make.hs  Rename.hs  Syntax.hs  Tidy.hs  Type.hs  UpdateCafInfos.hs  Utils.hs
core/src/GHC/Iface/Ext/: Ast.hs  Binary.hs  Debug.hs  Types.hs  Utils.hs
core/src/GHC/Iface/Recomp/: Binary.hs  Flags.hs
core/src/GHC/Iface/Tidy/: StaticPtrTable.hs
core/src/GHC/Llvm/: MetaData.hs  Ppr.hs  Syntax.hs  Types.hs
core/src/GHC/Parser/: Annotation.hs  CharClass.hs  Header.hs  Lexer.hs  PostProcess.hs
core/src/GHC/Platform/: ARM.hs  ARM64.hs  NoRegs.hs  PPC.hs  Reg.hs  Regs.hs  SPARC.hs  X86.hs  X86_64.hs
core/src/GHC/Platform/Reg/: Class.hs
core/src/GHC/Plugins/: Compat.hs  Upstream.hs
core/src/GHC/Prelude/: Basic.hs
core/src/GHC/Rename/: Bind.hs  Doc.hs  Env.hs  Expr.hs  Fixity.hs  HsType.hs  Module.hs  Names.hs  Pat.hs  Splice.hs  Unbound.hs  Utils.hs
core/src/GHC/Runtime/: Debugger.hs  Eval.hs  Interpreter.hs  Linker.hs  Loader.hs
core/src/GHC/Settings/: Config.hs  Constants.hs  IO.hs
core/src/GHC/Stg/: CSE.hs  FVs.hs  Lift.hs  Lint.hs  Pipeline.hs  Stats.hs  Subst.hs  Syntax.hs  Unarise.hs
core/src/GHC/StgToCmm/: ArgRep.hs  Bind.hs  CgUtils.hs  Closure.hs  DataCon.hs  Env.hs  Expr.hs  ExtCode.hs  Foreign.hs  Heap.hs  Hpc.hs  Layout.hs  Monad.hs  Prim.hs  Prof.hs  Ticky.hs  Utils.hs
core/src/GHC/SysTools/: Ar.hs  BaseDir.hs  Elf.hs  ExtraObj.hs  FileCleanup.hs  Info.hs  Process.hs  Tasks.hs  Terminal.hs
core/src/GHC/Tc/: Deriv.hs  Errors.hs  Module.hs  Plugin.hs  Solver.hs  TyCl.hs  Types.hs  Validity.hs
core/src/GHC/Types/: Annotation.hs  Annotations.hs  Avail.hs  Basic.hs  CostCentre.hs  Cpr.hs  Demand.hs  FieldLabel.hs  ForeignCall.hs  Id.hs  Literal.hs  Module.hs  Name.hs  RepType.hs  SrcLoc.hs  Unique.hs  Var.hs
core/src/GHC/Unit/: Info.hs  Module.hs  State.hs
core/src/GHC/Utils/: Asm.hs  Binary.hs  BufHandle.hs  CliOption.hs  Encoding.hs  Error.hs  Exception.hs  FV.hs  FingerPrint.hs  Fingerprint.hs  Json.hs  Lexeme.hs  Misc.hs  Monad.hs  Outputable.hs  Panic.hs  Ppr.hs
core/src/Language/Haskell/: Syntax.hs
(+105 files in other folders)
