cabal-version: 1.22
-- ^ This is the version with GHC 7.10, which we support

name: ghc-compat
version: 0.0.1.0
synopsis: Compatibility layer for the `ghc` library
description: Easily use the `ghc` library across multiple GHC releases..
maintainer: Greg Pfeil <greg@technomadic.org>
author: Greg Pfeil <greg@technomadic.org>
copyright: 2026 Greg Pfeil
license: AGPL-3
license-files:
  LICENSE
  LICENSE.AGPL-3.0-only
  LICENSE.Universal-FOSS-exception-1.0
  LICENSE.commercial
category:
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md
  docs/*.md
tested-with:
  -- requires cabal-version <= 1.22
  -- no `custom-setup`
  GHC ==7.10.3
  -- requires cabal-version <= 1.24
  -- no PVP version operator (`^>=`)
  || ==8.0.2
  -- requires cabal-version <= 2.0
  -- no `common` stanzas
  -- no SPDX licenses (use `AGPL-3` before this)
  || ==8.2.2
  -- requires cabal-version <= 2.2
  || ==8.4.1
  -- requires cabal-version <= 2.4
  -- no `Universal-FOSS-exception-1.0`
  -- no set-notation for dependencies
  || ==8.6.1
  || ==8.8.1
  || ==8.10.1
  || ==9.0.1
  || ==9.2.1
  || ==9.4.1 || ==9.4.8
  || ==9.6.1 || ==9.6.7
  || ==9.8.1 || ==9.8.4
  || ==9.10.1 || ==9.10.2 || ==9.10.3
  || ==9.12.1 || ==9.12.2
  || ==9.14.1

homepage: https://github.com/sellout/ghc-compat#readme
bug-reports: https://github.com/sellout/ghc-compat/issues

source-repository head
  type: git
  location: https://github.com/sellout/ghc-compat.git
  subdir: core

source-repository this
  type: git
  location: https://github.com/sellout/ghc-compat.git
  subdir: core
  -- NB: This is the repo version, which is distinct from the package version.
  tag: v0.1.0

library
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    -- DeriveLift -- uncomment if the oldest supported version is GHC 8.10.1+
    DeriveTraversable
    -- DerivingStrategies -- uncomment if the oldest supported version is GHC 8.2.1+
    DisambiguateRecordFields
    DoAndIfThenElse
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    -- HexFloatLiterals -- uncomment if the oldest supported version is GHC 8.4.1+
    -- ImportQualifiedPost -- uncomment if the oldest supported version is GHC 8.10.1+
    InstanceSigs
    LambdaCase
    MagicHash
    MonadComprehensions
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    -- NumericUnderscores -- uncomment if the oldest supported version is GHC 8.6.1+
    PolyKinds
    PostfixOperators
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    -- StandaloneKindSignatures -- uncomment if the oldest supported version is GHC 8.10.1+
    TupleSections
    -- TypeApplications -- uncomment if the oldest supported version is GHC 8.0.1+
    TypeOperators
    UnicodeSyntax
  if impl(ghc >= 8.0.1)
    ghc-options:
      -Weverything
      -- This one just reports unfixable things, AFAICT.
      -Wno-all-missed-specialisations
      -- Type inference good.
      -Wno-missing-local-signatures
      -- Warns even when `Unsafe` is explicit, not inferred. See
      -- https://gitlab.haskell.org/ghc/ghc/-/issues/16689
      -Wno-unsafe
      -- FIXME: These don’t belong here, but they need to be in a conditional,
      --        because `-Weverything` is in a conditional.
      -Wno-missing-import-lists
      -Wno-safe
    if impl(ghc < 8.8.1)
      ghc-options:
        -- This used to warn even when `Safe` was explicit.
        -Wno-safe
  else
    ghc-options:
      -Wall
  if impl(ghc >= 8.4.1) && impl(ghc < 9.4.1)
    ghc-options:
      -- This breaks `MIN_VERSION_GLASGOW_HASKELL` on some GHCs.`
      -Wno-cpp-undef
  if impl(ghc >= 8.6.1)
    ghc-options:
      -- remove if oldest supported version is GHC 8.6.1
      -Wno-star-is-type
  if impl(ghc >= 8.8.1)
    ghc-options:
      -- remove if oldest supported version is GHC 8.2.1
      -Wno-missing-deriving-strategies
  if impl(ghc >= 8.10.1)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -- remove if oldest supported version is GHC 8.10.1
      -Wno-prepositive-qualified-module
  default-extensions:
    -- BlockArguments - uncomment if the oldest supported version is GHC 8.6.1+
    CPP
    DefaultSignatures
    ExplicitNamespaces
    FunctionalDependencies
    LiberalTypeSynonyms
    -- replace with `LexicalNegation` if the oldest supported version is GHC 9.0.1+
    NegativeLiterals
    PackageImports
    ParallelListComp
    -- QualifiedDo - uncomment if the oldest supported version is GHC 9.0.1+
    RecursiveDo
    -- RequiredTypeArguments - uncomment if the oldest supported version is GHC 9.10.1+
    -- StrictData - uncomment if the oldest supported version is GHC 8.0.1+
    -- TemplateHaskellQuotes - uncomment if the oldest supported version is GHC 8.0.1+
    TransformListComp
    NoGeneralizedNewtypeDeriving
    NoImplicitPrelude
    NoMonomorphismRestriction
    NoPatternGuards
    -- NoStarIsType - uncomment if the oldest supported version is GHC 8.6.1+
    -- NoTypeApplications - uncomment if the oldest supported version is GHC 8.0.1+
  hs-source-dirs:
    src
  build-depends:
    ghc >=7.10.3 && <9.16
  if impl(ghc < 8.10)
    build-depends:
      base
  exposed-modules:
    GHC
    GHC.Builtin.Names
    GHC.Builtin.Names.TH
    GHC.Builtin.PrimOps
    GHC.Builtin.Types
    GHC.Builtin.Types.Literals
    GHC.Builtin.Types.Prim
    GHC.Builtin.Uniques
    GHC.Builtin.Utils
    GHC.ByteCode.Asm
    GHC.ByteCode.InfoTable
    GHC.ByteCode.Instr
    GHC.ByteCode.Linker
    GHC.ByteCode.Types
    GHC.Cmm
    GHC.Cmm.BlockId
    GHC.Cmm.CLabel
    GHC.Cmm.CallConv
    GHC.Cmm.CommonBlockElim
    GHC.Cmm.ContFlowOpt
    GHC.Cmm.Dataflow
    GHC.Cmm.Dataflow.Block
    GHC.Cmm.Dataflow.Collections
    GHC.Cmm.Dataflow.Graph
    GHC.Cmm.Dataflow.Label
    GHC.Cmm.DebugBlock
    GHC.Cmm.Expr
    GHC.Cmm.Graph
    GHC.Cmm.Info
    GHC.Cmm.Info.Build
    GHC.Cmm.LayoutStack
    GHC.Cmm.Lexer
    GHC.Cmm.Lint
    GHC.Cmm.Liveness
    GHC.Cmm.MachOp
    GHC.Cmm.Monad
    GHC.Cmm.Node
    GHC.Cmm.Opt
    GHC.Cmm.Parser
    GHC.Cmm.Pipeline
    GHC.Cmm.Ppr
    GHC.Cmm.Ppr.Decl
    GHC.Cmm.Ppr.Expr
    GHC.Cmm.ProcPoint
    GHC.Cmm.Sink
    GHC.Cmm.Switch
    GHC.Cmm.Switch.Implement
    GHC.Cmm.Type
    GHC.Cmm.Utils
    GHC.CmmToAsm
    GHC.CmmToAsm.BlockLayout
    GHC.CmmToAsm.CFG
    GHC.CmmToAsm.CFG.Dominators
    GHC.CmmToAsm.CPrim
    GHC.CmmToAsm.Dwarf
    GHC.CmmToAsm.Dwarf.Constants
    GHC.CmmToAsm.Dwarf.Types
    GHC.CmmToAsm.Format
    GHC.CmmToAsm.Instr
    GHC.CmmToAsm.Monad
    GHC.CmmToAsm.PIC
    GHC.CmmToAsm.PPC.CodeGen
    GHC.CmmToAsm.PPC.Cond
    GHC.CmmToAsm.PPC.Instr
    GHC.CmmToAsm.PPC.Ppr
    GHC.CmmToAsm.PPC.RegInfo
    GHC.CmmToAsm.PPC.Regs
    GHC.CmmToAsm.Ppr
    GHC.CmmToAsm.Reg.Graph
    GHC.CmmToAsm.Reg.Graph.Base
    GHC.CmmToAsm.Reg.Graph.Coalesce
    GHC.CmmToAsm.Reg.Graph.Spill
    GHC.CmmToAsm.Reg.Graph.SpillClean
    GHC.CmmToAsm.Reg.Graph.SpillCost
    GHC.CmmToAsm.Reg.Graph.Stats
    GHC.CmmToAsm.Reg.Graph.TrivColorable
    GHC.CmmToAsm.Reg.Graph.X86
    GHC.CmmToAsm.Reg.Linear
    GHC.CmmToAsm.Reg.Linear.Base
    GHC.CmmToAsm.Reg.Linear.FreeRegs
    GHC.CmmToAsm.Reg.Linear.JoinToTargets
    GHC.CmmToAsm.Reg.Linear.PPC
    GHC.CmmToAsm.Reg.Linear.StackMap
    GHC.CmmToAsm.Reg.Linear.State
    GHC.CmmToAsm.Reg.Linear.Stats
    GHC.CmmToAsm.Reg.Linear.X86
    GHC.CmmToAsm.Reg.Linear.X86_64
    GHC.CmmToAsm.Reg.Liveness
    GHC.CmmToAsm.Reg.Target
    GHC.CmmToAsm.X86.CodeGen
    GHC.CmmToAsm.X86.Cond
    GHC.CmmToAsm.X86.Instr
    GHC.CmmToAsm.X86.Ppr
    GHC.CmmToAsm.X86.RegInfo
    GHC.CmmToAsm.X86.Regs
    GHC.CmmToC
    GHC.CmmToLlvm
    GHC.CmmToLlvm.Base
    GHC.CmmToLlvm.CodeGen
    GHC.CmmToLlvm.Data
    GHC.CmmToLlvm.Mangler
    GHC.CmmToLlvm.Ppr
    GHC.CmmToLlvm.Regs
    GHC.Core
    GHC.Core.Class
    GHC.Core.Coercion
    GHC.Core.Coercion.Axiom
    GHC.Core.Coercion.Opt
    GHC.Core.ConLike
    GHC.Core.DataCon
    GHC.Core.FVs
    GHC.Core.FamInstEnv
    GHC.Core.InstEnv
    GHC.Core.Lint
    GHC.Core.Make
    GHC.Core.Map
    GHC.Core.Opt.Arity
    GHC.Core.Opt.CSE
    GHC.Core.Opt.CallArity
    GHC.Core.Opt.ConstantFold
    GHC.Core.Opt.DmdAnal
    GHC.Core.Opt.Exitify
    GHC.Core.Opt.FloatIn
    GHC.Core.Opt.FloatOut
    GHC.Core.Opt.LiberateCase
    GHC.Core.Opt.Monad
    GHC.Core.Opt.OccurAnal
    GHC.Core.Opt.Pipeline
    GHC.Core.Opt.SetLevels
    GHC.Core.Opt.Simplify
    GHC.Core.Opt.Simplify.Env
    GHC.Core.Opt.Simplify.Monad
    GHC.Core.Opt.Simplify.Utils
    GHC.Core.Opt.SpecConstr
    GHC.Core.Opt.Specialise
    GHC.Core.Opt.StaticArgs
    GHC.Core.Opt.WorkWrap
    GHC.Core.Opt.WorkWrap.Utils
    GHC.Core.PatSyn
    GHC.Core.Ppr
    GHC.Core.Ppr.TyThing
    GHC.Core.Predicate
    GHC.Core.Rules
    GHC.Core.Seq
    GHC.Core.SimpleOpt
    GHC.Core.Stats
    GHC.Core.Subst
    GHC.Core.Tidy
    GHC.Core.TyCo.FVs
    GHC.Core.TyCo.Ppr
    GHC.Core.TyCo.Rep
    GHC.Core.TyCo.Subst
    GHC.Core.TyCo.Tidy
    GHC.Core.TyCon
    GHC.Core.Type
    GHC.Core.Unfold
    GHC.Core.Unify
    GHC.Core.Utils
    GHC.CoreToByteCode
    GHC.CoreToIface
    GHC.CoreToStg
    GHC.CoreToStg.Prep
    GHC.Data.Bag
    GHC.Data.Bitmap
    GHC.Data.BooleanFormula
    GHC.Data.EnumSet
    GHC.Data.FastMutInt
    GHC.Data.FastString
    GHC.Data.FastString.Env
    GHC.Data.FiniteMap
    GHC.Data.Graph.Base
    GHC.Data.Graph.Color
    GHC.Data.Graph.Directed
    GHC.Data.Graph.Ops
    GHC.Data.Graph.Ppr
    GHC.Data.Graph.UnVar
    GHC.Data.IOEnv
    GHC.Data.List.SetOps
    GHC.Data.Maybe
    GHC.Data.OrdList
    GHC.Data.Pair
    GHC.Data.Stream
    GHC.Data.StringBuffer
    GHC.Data.TrieMap
    GHC.Driver.CmdLine
    GHC.Driver.CodeOutput
    GHC.Driver.DynFlags
    GHC.Driver.Env
    GHC.Driver.Env.Types
    GHC.Driver.Finder
    GHC.Driver.Flags
    GHC.Driver.Hooks
    GHC.Driver.Main
    GHC.Driver.Make
    GHC.Driver.MakeFile
    GHC.Driver.Monad
    GHC.Driver.Phases
    GHC.Driver.Pipeline
    GHC.Driver.Pipeline.Monad
    GHC.Driver.Plugins
    GHC.Driver.Session
    GHC.Hs
    GHC.Hs.Binds
    GHC.Hs.Decls
    GHC.Hs.Doc
    GHC.Hs.Dump
    GHC.Hs.Expr
    GHC.Hs.Extension
    GHC.Hs.ImpExp
    GHC.Hs.Instances
    GHC.Hs.Lit
    GHC.Hs.Pat
    GHC.Hs.PlaceHolder
    GHC.Hs.Stats
    GHC.Hs.Type
    GHC.Hs.Utils
    GHC.HsToCore
    GHC.HsToCore.Arrows
    GHC.HsToCore.Binds
    GHC.HsToCore.Coverage
    GHC.HsToCore.Docs
    GHC.HsToCore.Expr
    GHC.HsToCore.Foreign.Call
    GHC.HsToCore.Foreign.Decl
    GHC.HsToCore.GuardedRHSs
    GHC.HsToCore.ListComp
    GHC.HsToCore.Match
    GHC.HsToCore.Match.Constructor
    GHC.HsToCore.Match.Literal
    GHC.HsToCore.Monad
    GHC.HsToCore.PmCheck
    GHC.HsToCore.PmCheck.Oracle
    GHC.HsToCore.PmCheck.Ppr
    GHC.HsToCore.PmCheck.Types
    GHC.HsToCore.Quote
    GHC.HsToCore.Usage
    GHC.HsToCore.Utils
    GHC.Iface.Binary
    GHC.Iface.Env
    GHC.Iface.Ext.Ast
    GHC.Iface.Ext.Binary
    GHC.Iface.Ext.Debug
    GHC.Iface.Ext.Types
    GHC.Iface.Ext.Utils
    GHC.Iface.Load
    GHC.Iface.Make
    GHC.Iface.Recomp.Binary
    GHC.Iface.Recomp.Flags
    GHC.Iface.Rename
    GHC.Iface.Syntax
    GHC.Iface.Tidy
    GHC.Iface.Tidy.StaticPtrTable
    GHC.Iface.Type
    GHC.IfaceToCore
    GHC.Llvm
    GHC.Llvm.MetaData
    GHC.Llvm.Ppr
    GHC.Llvm.Syntax
    GHC.Llvm.Types
    GHC.Parser
    GHC.Parser.Annotation
    GHC.Parser.CharClass
    GHC.Parser.Header
    GHC.Parser.Lexer
    GHC.Parser.PostProcess
    GHC.Parser.PostProcess.Haddock
    GHC.Platform.ARM
    GHC.Platform.ARM64
    GHC.Platform.NoRegs
    GHC.Platform.PPC
    GHC.Platform.Reg
    GHC.Platform.Reg.Class
    GHC.Platform.Regs
    GHC.Platform.X86
    GHC.Platform.X86_64
    GHC.Plugins
    GHC.Prelude
    GHC.Prelude.Basic
    GHC.Rename.Bind
    GHC.Rename.Doc
    GHC.Rename.Env
    GHC.Rename.Expr
    GHC.Rename.Fixity
    GHC.Rename.HsType
    GHC.Rename.Module
    GHC.Rename.Names
    GHC.Rename.Pat
    GHC.Rename.Splice
    GHC.Rename.Unbound
    GHC.Rename.Utils
    GHC.Runtime.Debugger
    GHC.Runtime.Eval
    GHC.Runtime.Eval.Types
    GHC.Runtime.Heap.Inspect
    GHC.Runtime.Heap.Layout
    GHC.Runtime.Interpreter
    GHC.Runtime.Linker
    GHC.Runtime.Linker.Types
    GHC.Runtime.Loader
    GHC.Settings
    GHC.Settings.Config
    GHC.Settings.Constants
    GHC.Settings.IO
    GHC.Stg.CSE
    GHC.Stg.FVs
    GHC.Stg.Lift
    GHC.Stg.Lift.Analysis
    GHC.Stg.Lift.Monad
    GHC.Stg.Lint
    GHC.Stg.Pipeline
    GHC.Stg.Stats
    GHC.Stg.Subst
    GHC.Stg.Syntax
    GHC.Stg.Unarise
    GHC.StgToCmm
    GHC.StgToCmm.ArgRep
    GHC.StgToCmm.Bind
    GHC.StgToCmm.CgUtils
    GHC.StgToCmm.Closure
    GHC.StgToCmm.DataCon
    GHC.StgToCmm.Env
    GHC.StgToCmm.Expr
    GHC.StgToCmm.ExtCode
    GHC.StgToCmm.Foreign
    GHC.StgToCmm.Heap
    GHC.StgToCmm.Hpc
    GHC.StgToCmm.Layout
    GHC.StgToCmm.Monad
    GHC.StgToCmm.Prim
    GHC.StgToCmm.Prof
    GHC.StgToCmm.Ticky
    GHC.StgToCmm.Utils
    GHC.SysTools
    GHC.SysTools.Ar
    GHC.SysTools.BaseDir
    GHC.SysTools.Elf
    GHC.SysTools.ExtraObj
    GHC.SysTools.FileCleanup
    GHC.SysTools.Info
    GHC.SysTools.Process
    GHC.SysTools.Tasks
    GHC.SysTools.Terminal
    GHC.Tc.Deriv
    GHC.Tc.Deriv.Functor
    GHC.Tc.Deriv.Generate
    GHC.Tc.Deriv.Generics
    GHC.Tc.Deriv.Infer
    GHC.Tc.Deriv.Utils
    GHC.Tc.Errors
    GHC.Tc.Errors.Hole
    GHC.Tc.Errors.Hole.FitTypes
    GHC.Tc.Gen.Annotation
    GHC.Tc.Gen.Arrow
    GHC.Tc.Gen.Bind
    GHC.Tc.Gen.Default
    GHC.Tc.Gen.Export
    GHC.Tc.Gen.Expr
    GHC.Tc.Gen.Foreign
    GHC.Tc.Gen.HsType
    GHC.Tc.Gen.Match
    GHC.Tc.Gen.Pat
    GHC.Tc.Gen.Rule
    GHC.Tc.Gen.Sig
    GHC.Tc.Gen.Splice
    GHC.Tc.Instance.Class
    GHC.Tc.Instance.Family
    GHC.Tc.Instance.FunDeps
    GHC.Tc.Instance.Typeable
    GHC.Tc.Module
    GHC.Tc.Plugin
    GHC.Tc.Solver
    GHC.Tc.Solver.Canonical
    GHC.Tc.Solver.Flatten
    GHC.Tc.Solver.Interact
    GHC.Tc.Solver.Monad
    GHC.Tc.TyCl
    GHC.Tc.TyCl.Build
    GHC.Tc.TyCl.Class
    GHC.Tc.TyCl.Instance
    GHC.Tc.TyCl.PatSyn
    GHC.Tc.TyCl.Utils
    GHC.Tc.Types
    GHC.Tc.Types.Constraint
    GHC.Tc.Types.EvTerm
    GHC.Tc.Types.Evidence
    GHC.Tc.Types.Origin
    GHC.Tc.Utils.Env
    GHC.Tc.Utils.Instantiate
    GHC.Tc.Utils.Monad
    GHC.Tc.Utils.TcMType
    GHC.Tc.Utils.TcType
    GHC.Tc.Utils.Unify
    GHC.Tc.Utils.Zonk
    GHC.Tc.Validity
    GHC.ThToHs
    GHC.Types.Annotations
    GHC.Types.Avail
    GHC.Types.Basic
    GHC.Types.CostCentre
    GHC.Types.CostCentre.State
    GHC.Types.Cpr
    GHC.Types.Demand
    GHC.Types.FieldLabel
    GHC.Types.ForeignCall
    GHC.Types.Id
    GHC.Types.Id.Info
    GHC.Types.Id.Make
    GHC.Types.Literal
    GHC.Types.Name
    GHC.Types.Name.Cache
    GHC.Types.Name.Env
    GHC.Types.Name.Occurrence
    GHC.Types.Name.Reader
    GHC.Types.Name.Set
    GHC.Types.Name.Shape
    GHC.Types.RepType
    GHC.Types.SrcLoc
    GHC.Types.Unique
    GHC.Types.Unique.DFM
    GHC.Types.Unique.DSet
    GHC.Types.Unique.FM
    GHC.Types.Unique.Map
    GHC.Types.Unique.Set
    GHC.Types.Unique.Supply
    GHC.Types.Var
    GHC.Types.Var.Env
    GHC.Types.Var.Set
    GHC.Unit.Info
    GHC.Unit.Module
    GHC.Unit.Module.ModIface
    GHC.Unit.Module.ModSummary
    GHC.Unit.State
    GHC.Utils.Asm
    GHC.Utils.Binary
    GHC.Utils.BufHandle
    GHC.Utils.CliOption
    GHC.Utils.Encoding
    GHC.Utils.Error
    GHC.Utils.Exception
    GHC.Utils.Fingerprint
    GHC.Utils.FV
    GHC.Utils.IO.Unsafe
    GHC.Utils.Json
    GHC.Utils.Lexeme
    GHC.Utils.Misc
    GHC.Utils.Monad
    GHC.Utils.Monad.State
    GHC.Utils.Outputable
    GHC.Utils.Panic
    GHC.Utils.Panic.Plain
    GHC.Utils.Ppr
    GHC.Utils.Ppr.Colour
    Language.Haskell.Syntax
    Language.Haskell.Syntax.Binds
    Language.Haskell.Syntax.Decls
    Language.Haskell.Syntax.Expr
    Language.Haskell.Syntax.Extension
    Language.Haskell.Syntax.Lit
    Language.Haskell.Syntax.Pat
    Language.Haskell.Syntax.Type
  -- Backpack was added in GHC 8.2
  if impl(ghc >= 8.2)
    exposed-modules:
      GHC.Driver.Backpack
      GHC.Driver.Backpack.Syntax
      GHC.Tc.Utils.Backpack
  -- SPARC support was removed in GHC 9.4
  -- (https://gitlab.haskell.org/ghc/ghc/-/merge_requests/7431)
  if impl(ghc < 9.4)
    exposed-modules:
      GHC.CmmToAsm.Reg.Linear.SPARC
      GHC.CmmToAsm.SPARC.AddrMode
      GHC.CmmToAsm.SPARC.Base
      GHC.CmmToAsm.SPARC.CodeGen
      GHC.CmmToAsm.SPARC.CodeGen.Amode
      GHC.CmmToAsm.SPARC.CodeGen.Base
      GHC.CmmToAsm.SPARC.CodeGen.CondCode
      GHC.CmmToAsm.SPARC.CodeGen.Expand
      GHC.CmmToAsm.SPARC.CodeGen.Gen32
      GHC.CmmToAsm.SPARC.CodeGen.Gen64
      GHC.CmmToAsm.SPARC.CodeGen.Sanity
      GHC.CmmToAsm.SPARC.Cond
      GHC.CmmToAsm.SPARC.Imm
      GHC.CmmToAsm.SPARC.Instr
      GHC.CmmToAsm.SPARC.Ppr
      GHC.CmmToAsm.SPARC.Regs
      GHC.CmmToAsm.SPARC.ShortcutJump
      GHC.CmmToAsm.SPARC.Stack
      GHC.Platform.SPARC
  other-modules:
    GHC.Driver.Flags.Compat
    GHC.Driver.Flags.Upstream
    GHC.Driver.Plugins.Compat
    GHC.Driver.Plugins.Upstream
    GHC.Plugins.Upstream
    Unresolved
